# Function-calling-tests

./: .gitignore  Monarch-Tools-V0.1.py  README.md  config.py  pyproject.toml  requirements.txt  tools.py  utils.py
Nootbooks/: tests.ipynb
app/: Monarch-Tools-V0.1.py  crew_ai.py
crew_ai_project/: agents.py  chat_logs.py  crew_setup.py  db.py  llm_config.py  logger.py  main.py  open_ai_client.py  streamlit_app.py  tasks.py  tools.py  tracker.logger
infos/: fetch.json  tool_abstract.json
