[tool.poetry]
name = "function-calling"
version = "0.1.0"
description = ""
authors = ["anouar taizoukt <ataizoukt@leyton.com>"]
readme = "README.md"
package-mode = false

[tool.poetry.dependencies]
python = ">=3.11,<3.13"
requests = "^2.32.3"
streamlit = "^1.41.1"
openai = "^1.61.0"
crewai = "^0.100.1"
pysqlite3-binary = "^0.5.4"
asyncpg = "^0.30.0"
psycopg-pool = "^3.2.4"
psycopg = "^3.2.4"
psycopg-binary = "^3.2.4"

